// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Flow - Select Dataset And Model Datasets and Model Selection Screen should render Datasets / Model selection screen: Datasets/Model-Selection-Screen 1`] = `
<div
  class="layoutContentArea"
>
  <div
    class="scrollContainer"
  >
    <div
      class="container__limits"
    >
      <div
        class="inputsLayout"
      >
        <div
          class="stickyInputsLeftpanel"
          id="inputsLeftpanel"
        >
          <div
            class="projectDetail"
          >
            <h4>
              Project
            </h4>
            <h3>
              Test Project
            </h3>
          </div>
          <div
            class="root list__expanded"
            style="margin-top: 10px;"
          >
            <div
              class="header"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium arrowIcon css-i4bv87-MuiSvgIcon-root"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m7 10 5 5 5-5z"
                />
              </svg>
              <div
                class="headerContent"
              >
                <div
                  class="headerChild"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="DirectionsRunIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M13.49 5.48c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm-3.6 13.9 1-4.4 2.1 2v6h2v-7.5l-2.1-2 .6-3c1.3 1.5 3.3 2.5 5.5 2.5v-2c-1.9 0-3.5-1-4.3-2.4l-1-1.6c-.4-.6-1-1-1.7-1-.3 0-.5.1-.8.1l-5.2 2.2v4.7h2v-3.4l1.8-.7-1.6 8.1-4.9-1-.4 2 7 1.4z"
                    />
                  </svg>
                  <span
                    style="color: rgb(103, 103, 103); font-weight: 500;"
                  >
                    Tests Arguments
                  </span>
                </div>
              </div>
            </div>
            <div
              class="list"
            >
              <div
                class="item"
              >
                <div
                  class="itemWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ErrorIcon"
                    focusable="false"
                    style="color: rgb(247, 57, 57); font-size: 29px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
                    />
                  </svg>
                  <div
                    class="itemText"
                  >
                    Fairness Metrics Toolbox for Regression
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="root list__expanded"
            style="margin-top: 10px;"
          >
            <div
              class="header"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium arrowIcon css-i4bv87-MuiSvgIcon-root"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m7 10 5 5 5-5z"
                />
              </svg>
              <div
                class="headerContent"
              >
                <div
                  class="headerChild"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="DynamicFormIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 20v-9h-2V4h7l-2 5h2l-5 11zm-2-7v7H4c-1.1 0-2-.9-2-2v-3c0-1.1.9-2 2-2h11zm-8.75 2.75h-1.5v1.5h1.5v-1.5zM13 4v7H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2h9zM6.25 6.75h-1.5v1.5h1.5v-1.5z"
                    />
                  </svg>
                  <span
                    style="color: rgb(103, 103, 103); font-weight: 500;"
                  >
                    Input Blocks Progress
                  </span>
                </div>
              </div>
            </div>
            <div
              class="list"
            >
              <div
                class="iBlockStepperWrapper"
              >
                <div
                  style="margin-top: 10px; margin-bottom: 10px;"
                >
                  <div
                    class="MuiStepper-root MuiStepper-vertical css-9tmuzo-MuiStepper-root"
                    style="text-align: center;"
                  >
                    <div
                      class="MuiStep-root MuiStep-vertical css-8wcvy5-MuiStep-root"
                    >
                      <span
                        class="MuiStepLabel-root MuiStepLabel-vertical css-14sza3e-MuiStepLabel-root"
                      >
                        <span
                          class="MuiStepLabel-iconContainer Mui-active css-vnkopk-MuiStepLabel-iconContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeLarge css-1p22c1a-MuiSvgIcon-root"
                            data-testid="CircleIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiStepLabel-labelContainer css-1vyamtt-MuiStepLabel-labelContainer"
                        >
                          <span
                            class="MuiStepLabel-label Mui-active css-1hv8oq8-MuiStepLabel-label"
                          >
                            <div
                              style="cursor: pointer; color: rgb(103, 103, 103); font-weight: 600;"
                            >
                              Mock Input Block 1
                            </div>
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="inputsRightpanel"
          id="inputsRightPanel"
        >
          <div>
            <div
              class="inputSection"
            >
              <div
                class="sectionHeading"
              >
                <h3
                  class="screenHeading"
                >
                  Select the Datasets and AI Model to be tested
                </h3>
                <p
                  class="headingDescription"
                >
                  Please select the datasets required for report generation followed by the AI Model to be tested
                </p>
              </div>
              <div
                class="inputCard"
              >
                <div
                  class="inputDescription"
                  style="width: 350px;"
                >
                  <h4>
                    Testing Dataset
                  </h4>
                  <p>
                    Select the testing dataset to be used for the tests to run.
                  </p>
                </div>
                <div
                  class="divider"
                />
                <div
                  class="inputMain"
                >
                  <button
                    class="aivBase-button aivBase-button--outlined aivBase-button--small"
                    id="chooseTestDatasetBtn"
                  >
                    Choose Dataset
                  </button>
                </div>
              </div>
              <div
                class="inputCard"
              >
                <div
                  class="inputDescription"
                  style="width: 350px;"
                >
                  <h4>
                    Ground Truth Dataset
                  </h4>
                  <p>
                    Select the dataset containing the ground truth. The testing dataset can be used.
                  </p>
                </div>
                <div
                  class="divider"
                />
                <div
                  class="inputMain"
                >
                  <button
                    class="aivBase-button aivBase-button--outlined aivBase-button--small"
                    id="chooseGroundTruthBtn"
                  >
                    Choose Dataset
                  </button>
                </div>
              </div>
              <div
                class="inputCard"
              >
                <div
                  class="inputDescription"
                  style="width: 350px;"
                >
                  <h4>
                    AI Model
                  </h4>
                  <p>
                    Select the AI Model to be tested. Model Upload and API Connection available.
                  </p>
                </div>
                <div
                  class="divider"
                />
                <div
                  class="inputMain"
                >
                  <button
                    class="aivBase-button aivBase-button--outlined aivBase-button--small"
                  >
                    Choose Model
                  </button>
                </div>
              </div>
            </div>
            <div
              class="inputSection"
            >
              <div
                class="sectionHeading"
              >
                <h3
                  class="screenHeading"
                >
                  Provide Test Arguments
                </h3>
                <p
                  class="headingDescription"
                >
                  Open each test argument to provide the arguments required to run the tests and generate the report
                </p>
              </div>
              <div
                class="inputCard"
                id="algocard-aiverify.test.mock_test_plugin1:mock_algo1"
              >
                <div
                  class="inputDescription"
                  style="width: 350px;"
                >
                  <h4>
                    Fairness Metrics Toolbox for Regression
                  </h4>
                </div>
                <div
                  class="divider"
                />
                <div
                  class="inputMain"
                >
                  <p>
                    This is a mock description of mock algo 1
                  </p>
                  <div
                    class="buttonRow"
                  >
                    <button
                      class="aivBase-button aivBase-button--primary aivBase-button--small"
                    >
                      Open
                    </button>
                    <div
                      class="errorMsg"
                    >
                      Invalid Arguments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="inputSection"
          >
            <div
              class="sectionHeading"
            >
              <h3
                class="screenHeading"
              >
                Complete Input Blocks
              </h3>
              <p
                class="headingDescription"
              >
                Open each input block to provide the information required
              </p>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="inputCard"
                id="ibcard-aiverify.test.mock_test_plugin1:mock_iblock1"
              >
                <div
                  class="inputDescription"
                  style="width: 350px;"
                >
                  <h4>
                    Mock Input Block 1
                  </h4>
                  <div
                    class="inputSummary"
                  />
                </div>
                <div
                  class="divider"
                />
                <div
                  class="inputMain"
                >
                  <p />
                  <div
                    class="buttonRow"
                  >
                    <button
                      class="aivBase-button aivBase-button--primary aivBase-button--small"
                    >
                      Open
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Flow - Select Dataset And Model Datasets and Model Selection Screen should select Datasets, Ground truth, capture Test arguments, Input Blocks and call generate report endpoints: leftPanel progress tracker AFTER valid inputs 1`] = `
<div
  class="stickyInputsLeftpanel"
  id="inputsLeftpanel"
>
  <div
    class="projectDetail"
  >
    <h4>
      Project
    </h4>
    <h3>
      Test Project
    </h3>
  </div>
  <div
    class="root list__expanded"
    style="margin-top: 10px;"
  >
    <div
      class="header"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium arrowIcon css-i4bv87-MuiSvgIcon-root"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
      <div
        class="headerContent"
      >
        <div
          class="headerChild"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DirectionsRunIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.49 5.48c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm-3.6 13.9 1-4.4 2.1 2v6h2v-7.5l-2.1-2 .6-3c1.3 1.5 3.3 2.5 5.5 2.5v-2c-1.9 0-3.5-1-4.3-2.4l-1-1.6c-.4-.6-1-1-1.7-1-.3 0-.5.1-.8.1l-5.2 2.2v4.7h2v-3.4l1.8-.7-1.6 8.1-4.9-1-.4 2 7 1.4z"
            />
          </svg>
          <span
            style="color: rgb(103, 103, 103); font-weight: 500;"
          >
            Tests Arguments
          </span>
        </div>
      </div>
    </div>
    <div
      class="list"
    >
      <div
        class="item"
      >
        <div
          class="itemWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CheckCircleIcon"
            focusable="false"
            style="color: rgb(112, 47, 138); font-size: 28px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          <div
            class="itemText"
          >
            Fairness Metrics Toolbox for Regression
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="root list__expanded"
    style="margin-top: 10px;"
  >
    <div
      class="header"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium arrowIcon css-i4bv87-MuiSvgIcon-root"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
      <div
        class="headerContent"
      >
        <div
          class="headerChild"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DynamicFormIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M17 20v-9h-2V4h7l-2 5h2l-5 11zm-2-7v7H4c-1.1 0-2-.9-2-2v-3c0-1.1.9-2 2-2h11zm-8.75 2.75h-1.5v1.5h1.5v-1.5zM13 4v7H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2h9zM6.25 6.75h-1.5v1.5h1.5v-1.5z"
            />
          </svg>
          <span
            style="color: rgb(103, 103, 103); font-weight: 500;"
          >
            Input Blocks Progress
          </span>
        </div>
      </div>
    </div>
    <div
      class="list"
    >
      <div
        class="iBlockStepperWrapper"
      >
        <div
          style="margin-top: 10px; margin-bottom: 10px;"
        >
          <div
            class="MuiStepper-root MuiStepper-vertical css-9tmuzo-MuiStepper-root"
            style="text-align: center;"
          >
            <div
              class="MuiStep-root MuiStep-vertical Mui-completed css-8wcvy5-MuiStep-root"
            >
              <span
                class="MuiStepLabel-root MuiStepLabel-vertical css-14sza3e-MuiStepLabel-root"
              >
                <span
                  class="MuiStepLabel-iconContainer Mui-active Mui-completed css-vnkopk-MuiStepLabel-iconContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeLarge css-1p22c1a-MuiSvgIcon-root"
                    data-testid="CheckCircleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiStepLabel-labelContainer css-1vyamtt-MuiStepLabel-labelContainer"
                >
                  <span
                    class="MuiStepLabel-label Mui-active Mui-completed css-1hv8oq8-MuiStepLabel-label"
                  >
                    <div
                      style="cursor: pointer; color: rgb(103, 103, 103); font-weight: 600;"
                    >
                      Mock Input Block 1
                    </div>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
